2006-10-26  Tania Bento  <tbento@redhat.com>
	
	* java/awt/FileDialog.java:
	(setFile): Changed if-clause condition.

2006-10-25  Francis Kung  <fkung@redhat.com>

	* include/gnu_java_nio_VMChannel.h,
	* include/java_net_VMNetworkInterface.h,
	* include/gnu_java_nio_EpollSelectorImpl.h,
	* include/gnu_java_awt_peer_gtk_CairoGraphics2D.h,
	* include/gnu_java_nio_FileChannelImpl.h,
	* include/gnu_java_nio_KqueueSelectorImpl.h,
	* include/gnu_java_nio_VMPipe.h,
	* include/gnu_java_net_VMPlainSocketImpl.h: Regenerated.

2006-10-25  Tania Bento  <tbento@redhat.com>

	* java/awt/Dialog.java: Created new private variable
	next_dialog_number.
	(Dialog(Frame, String, boolean, GraphicsConfiguration)):
	Set cursor to default cursor.
	(Dialog(Dialog, STring, boolean, GraphicsConfiguration)):
	Same.
	(generateName): New method.
	(getUniqueLong): New private method.
	* java/awt/FileDialog.java: Created new private variable
	next_file_dialog_number.
	(setFile): If file == "", set it to null.
	(generateName): New method.
	(getUniqueLong): New private method.

2006-10-25  Robert Schuster  <robertschuster@fsfe.org>

	* java/net/MulticastSocket.java:
	(setNetworkInterface): Rewritten.

2006-10-25  Robert Schuster  <robertschuster@fsfe.org>

	* native/jni/java-net/javanet.h: Added declaration for
	_javanet_create_inetaddress.
	* native/jni/java-net/javanet.c:
	(_javanet_create_inetaddress): Removed static keyword.

2006-10-25  Robert Schuster  <robertschuster@fsfe.org>

        * gnu/java/net/PlainDatagramSocketImpl.java:
        (connect): Use VMChannel instance for connect call.
        (getTimeToLive): Call VMPlainSocketImpl.getTimeToLive.
        (setTimeToLive): Call VMPlainSocketImpl.setTimeToLive.
	(setOption): Handle multicast options.
	(getOption): Handle multicast options.
        * gnu/java/net/PlainSocketImpl.java:
        (getTimeToLive): Call VMPlainSocketImpl.getTimeToLive.
        (setTimeToLive): Call VMPlainSocketImpl.setTimeToLive.